# sound-api

./: .dockerignore  .dockerinit.sh  .example.environment  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dev.requirements.txt  docker-compose.dev.yml  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: github-actions-build_image.yml  github-actions-demo.yml
api/: urls.py
api/v1/: urls.py
apps/album/: choices.py  models.py
apps/track/: choices.py  managers.py
apps/track/models/: __init__.py  track.py
sound/: asgi.py  urls.py  wsgi.py
sound/settings/: __init__.py  settings.py  storage_settings.py
utils/models/: base.py
