[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'sound-api'
dynamic = ['version']
requires-python = '>=3.11'
dependencies = [
    'celery',
    'Django',
    'djangorestframework',
    'djangorestframework-simplejwt',
    'drf-spectacular',
    'django-environ',
    'gunicorn',
    'redis',
    'uvicorn',
    'uvicorn-worker',
    'psycopg2-binary',
    'pytest',
    'pytest-django',
    'pytest-xdist',
]

[project.optional-dependencies]
dev = [
    'pre-commit',
]

[tool.isort]
profile = 'black'
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
max-line-length = 120
ignore = 'E741'

[tool.pytest.ini_options]
addopts = '-ra --new-first --failed-first --no-migrations'
DJANGO_SETTINGS_MODULE = 'sound.settings'
filterwarnings = [
    'ignore::RuntimeWarning',
    'ignore::DeprecationWarning',
]
